fix: on mobile, width of body is larger because 'asset-green' biggest

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,6 +195,7 @@ body{
     .cf-container{
         padding: 40px !important;
     }
+    .asset-green,
     .cf-toolbar .cf-toolbar__item{
         display: none !important;
     }
